testdata/baselines/reference/submodule/conformance/jsdocTypeReferenceToMergedClass.errors.txt
jsdocTypeReferenceToMergedClass.js(2,12): error TS2503: Cannot find namespace 'Workspace'.
jsdocTypeReferenceToMergedClass.js(2,12): error TS8010: Type annotations can only be used in TypeScript files.


==== jsdocTypeReferenceToMergedClass.js (2 errors) ====
    var Workspace = {}
    /** @type {Workspace.Project} */
               ~~~~~~~~~
!!! error TS2503: Cannot find namespace 'Workspace'.
               ~~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    var p;
    p.isServiceProject()
    
    Workspace.Project = function wp() { }
    Workspace.Project.prototype = {
      isServiceProject() {}
    }
    